kub/simple_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-deployment
spec:
  selector:
    matchLabels:
      app: simple-web
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: simple-web
        image: nikita99m/simple-web
        ports:
        - containerPort: 8090
