kub/simple_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: simple-web
spec:
  type: LoadBalancer
  selector:
    app: simple-web
  ports:
  - name: http
    port: 9090
    targetPort: 8080
