kub/simple_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/hello"
        backend:
          service:
            name: simple-web-service
            port:
              number: 80
  - host: "test.com"
    http:
      paths:
      - pathType: Prefix
        path: "/hi"
        backend:
          service:
            name: simple-web-service
            port:
              number: 80
